# incremental-society

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  azure-pipelines.yml  build.rs  clippy.toml  incremental-society.sln
.github/workflows/: rust.yml
data/: actions.json  buildings.json  constants.json  game.json  jobs.json  needs.json  regions.json  resources.json
docs/: Building.md  Challenges.md  Gameplay.md  Provinces.md  ResearchAndUpgrades.md  _config.yml  ages.md  buildings.md  future.json  gameplay.md  overview.md  resources.md  systems.md
docs/_posts/: 2019-06-17-many-pieces-to-get-started.md
docs/assets/: main.scss
docs/ideas/: future.json  research.md  systems.md
ideas/: gameplay.md  resources.md
runner/: runner.cs  runner.csproj
src/: actions.rs  building.rs  buildings.rs  conversion.rs  data.rs  derived_state.rs  disaster.rs  ecs.rs  engine.rs  engine_error.rs  lib.rs  main.rs  region.rs  regions.rs  resources.rs  state.rs
src/IncrementalSociety.Web/: IncrementalSociety.Web.csproj  Program.cs  Startup.cs  _ViewImports.cshtml
src/console_ui/: colors.rs  keyboard.rs  mod.rs  modal.rs  (+2 more)
tests/: BuildingEngineTests.cs  EdictsCooldownTests.cs  EdictsEngineTests.cs  Factories.cs  GameEngineTests.cs  JsonLoaderTests.cs  PopulationEngineTests.cs  PopulationNeedsEngineTests.cs  RegionGeneratorTests.cs  ResearchEngineTests.cs  ResourceEngineTests.cs  ResourceExtensionTests.cs  ResourceTestBase.cs  Resources.cs  ResourcesTests.cs  SaveLoadTests.cs  UnitTest1.cs  YieldCacheTests.cs  incremental-society.tests.csproj
(+152 files in other folders)
