[package]
name = "incremental-society"
version = "0.1.0"
authors = ["Chris Hamons <chris.hamons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4"
itertools = "0.8.2"

[dependencies.pancurses]
version = "0.16"
features = ["win32"]
