[package]
name = "incremental-society"
version = "0.1.0"
authors = ["Chris Hamons <chris.hamons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4"
itertools = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
rand = { version = "0.7", features = ["small_rng"]}
assert_approx_eq = "1.1.0"
derive_is_enum_variant = "0.1.1"
dirs = "2.0.2"

[dependencies.pancurses]
version = "0.16"
features = ["win32"]
