[package]
name = "incremental-society"
version = "0.1.0"
authors = ["Chris Hamons <chris.hamons@gmail.com>"]
edition = "2018"

[dependencies]
eframe = "0.11.0"
specs = {  version = "0.16.1", features = ["serde"], default-features = false }
specs-derive = "0.4.1"
serde = { version = "1.0.114", features = ["derive"] }